# Tissue-Processor

./: .gitignore  FiniteState.cpp  FiniteState.h  Makefile  README.md  TissueProcessor.ino  clang-tidy  platformio.ini  pyproject.toml  requirements.txt
.github/: CODEOWNERS  compile.yaml
.github/workflows/: compile.yaml
TissueProcessor/: Main.h  TissueProcessor.ino
tests/native/: TestFirmware.cpp
tests/python/: test_fsm_integration.py  test_unit.py
