[project]
name = "tissueprocessor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
lint = [
    "codechecker>=6.27.3",
    "cpplint>=2.0.2",
]
test = [
    "platformio>=6.1.19",
    "pytest>=9.0.2",
]
